--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,46 @@
+body {
+    background-color: #f2f1ed;
+}
+
+.wrap {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 0px;
+}
+
+a {
+    text-decoration: none;
+    color: #1a1a1a;
+}
+
+
+h1 {
+    margin-bottom: 60px;
+    text-align: center;
+    font: 300 2.25em;
+    text-transform: uppercase;
+
+    strong {
+        font-weight: 400;
+        color: #ea4c4c;
+    }
+}
+
+h2 {
+    margin-bottom: 80px;
+    text-align: center;
+    font: 300 0.7em;
+    text-transform: uppercase;
+
+    strong {
+        font-weight: 400;
+    }
+}
+
 .countdown {
     width: 1000px;
     margin: 0 auto;
@@ -46,7 +89,7 @@
     margin: auto;
     font: normal 5.94em/107px "Lato";
     font-weight: 700;
-    color: #958f8f;
+    color: #e43737;
 }
 
 .countdown .figure .top:after,
@@ -58,7 +101,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(231, 24, 24, 0.1);
 }
 
 .countdown .figure .top {
