--- a/app/main.css
+++ b/app/main.css
@@ -1,15 +1,118 @@
 body {
-    background-color: #f2f1ed;
+    background-color: #1c1c1c;
+    overflow: hidden;
+    background-image: url('~/public/image/banner.jpg');
+
+}
+
+#background {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+
+}
+
+.title {
+    color: white;
+    font-family: "Quicksand", sans-serif;
+    font-size: 4rem;
+    text-transform: uppercase;
+    margin-top: 50px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+
+    span {
+        font-size: 4rem;
+        cursor: pointer;
+    }
+
+    &:hover {
+        -webkit-animation: MISSION-HOVER 1.5s infinite;
+        -moz-animation: MISSION-HOVER 1.5s infinite;
+        -o-animation: MISSION-HOVER 1.5s infinite;
+        animation: MISSION-HOVER 1.5s infinite;
+        animation-direction: alternate;
+        animation-timing-function: ease;
+    }
+
+    @-webkit-keyframes MISSION-HOVER {
+
+        0%,
+        100% {
+            font-size: 4rem;
+            color: white;
+        }
+
+        50% {
+            color: #bffcff;
+            letter-spacing: 5px;
+            text-shadow: 0px 0px 30px rgba(191, 252, 255, 1);
+        }
+    }
+}
+
+p {
+    color: #e6dbae;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.5rem;
+    margin: 0 auto;
+    padding: 0;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+    text-align: center;
+
+    &:last-child {
+        font-size: 0.75rem;
+        font-weight: 700;
+        margin: 3em auto;
+        padding: 0;
+        letter-spacing: 0.1rem;
+
+        >a {
+            text-decoration: none;
+            color: inherit;
+            -moz-transition: all 0.2s ease-in;
+            -o-transition: all 0.2s ease-in;
+            -webkit-transition: all 0.2s ease-in;
+            transition: all 0.2s ease-in;
+
+            &:hover {
+                color: #fff;
+            }
+        }
+    }
 }
 
 .wrap {
     position: absolute;
     bottom: 0;
-    top: 0;
-    left: 0;
+    transform: translate(-50%, 0);
+    left: 50%;
     right: 0;
+    align-items: center;
     margin: auto;
-    height: 0px;
+    height: 480px;
+    width: 60%;
+    background-color: #ffffff21;
+    border-radius: 50% 20% / 10% 40%;
+    margin: 50px;
+
 }
 
 a {
@@ -47,10 +150,8 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #00000011;
-    border-radius: 50% 20% / 10% 40%;
-    width: 1200px;
-    height: 360px;
+    width: 1970px;
+    height: 500px;
     margin: 0 auto;
 }
 
@@ -67,20 +168,21 @@ h2 {
 .countdown .count-title {
     z-index: 4;
     display: block;
-    margin-bottom: 15px;
-    font: normal 1.5em;
-    color: #1a1a1a;
+    margin-bottom: 20px;
+    font: normal 2.5em Lato;
+    font-family: var(--font-inter);
+    color: #ffffff;
     text-transform: uppercase;
 }
 
 .countdown .figure {
     position: relative;
     float: left;
-    height: 120px;
-    width: 100px;
+    height: 230px;
+    width: 220px;
     margin-right: 10px;
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 10px;
     -moz-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
     -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
@@ -95,10 +197,10 @@ h2 {
     left: 0;
     right: 0;
     margin: auto;
-    font: normal 5.94em/107px Lato;
+    font: normal 8.5em/215px Lato;
     font-family: var(--font-inter);
-    font-weight: 700;
-    color: #e43737;
+    font-weight: 800;
+    color: #493acf;
 }
 
 .countdown .figure .top:after,
