--- a/app/main.css
+++ b/app/main.css
@@ -9,21 +9,89 @@ body {
     min-width: 900px;
 }
 
+.title {
+    color: white;
+    font-family: "Quicksand", sans-serif;
+    font-size: 4rem;
+    text-transform: uppercase;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+
+    span {
+        font-size: 4rem;
+        cursor: pointer;
+    }
+}
+
+p {
+    color: #e6dbae;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.5rem;
+    margin: 0 auto;
+    padding: 0;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+
+    &:last-child {
+        font-size: 0.75rem;
+        font-weight: 700;
+        margin: 3em auto;
+        padding: 0;
+        letter-spacing: 0.1rem;
+
+        >a {
+            text-decoration: none;
+            color: inherit;
+            -moz-transition: all 0.2s ease-in;
+            -o-transition: all 0.2s ease-in;
+            -webkit-transition: all 0.2s ease-in;
+            transition: all 0.2s ease-in;
+
+            &:hover {
+                color: #fff;
+            }
+        }
+    }
+}
+
+p.timedescription {
+    font-size: 0.6rem;
+    font-variant: small-caps;
+    line-height: 1.5rem;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+
+
+}
+
+p.timeRefDays {
+    left: 26%;
+}
+
+p.timeRefHours {
+    left: 47%;
+}
+
+p.timeRefMinutes {
+    left: 69%;
+}
+
 video {
-    width: inherit;
+    /* width: inherit; */
 }
 
 .container {
     position: absolute;
-    height: 2560px;
-    width: 1440px;
+    height: 1080px;
+    width: 1920px;
     align-items: center;
 }
 
 .clock {
-    height: 200px;
+    height: 100%;
     position: absolute;
-    top: 39%;
+    top: 84%;
     left: 50%;
     width: 900px;
     margin-left: -450px;
@@ -32,8 +100,8 @@ video {
 }
 
 .digit {
-    width: 160px;
-    height: 260px;
+    width: 80px;
+    height: 140px;
     margin: 0 5px;
     position: relative;
     display: inline-block;
@@ -63,13 +131,13 @@ video {
 }
 
 .separator {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     background: rgb(255, 255, 255);
     border-radius: 50%;
     display: inline-block;
     position: relative;
-    top: -120px;
+    top: -63px;
 }
 
 .digit .segment:nth-child(1) {
@@ -82,7 +150,7 @@ video {
 .digit .segment:nth-child(2) {
     top: 20px;
     right: 10px;
-    width: 15px;
+    width: 10px;
     height: 75px;
     height: calc(50% - 25px);
 }
@@ -90,7 +158,7 @@ video {
 .digit .segment:nth-child(3) {
     bottom: 20px;
     right: 10px;
-    width: 15px;
+    width: 10px;
     height: 75px;
     height: calc(50% - 25px);
 }
@@ -105,7 +173,7 @@ video {
 .digit .segment:nth-child(5) {
     bottom: 20px;
     left: 10px;
-    width: 15px;
+    width: 10px;
     height: 75px;
     height: calc(50% - 25px);
 }
@@ -113,7 +181,7 @@ video {
 .digit .segment:nth-child(6) {
     top: 20px;
     left: 10px;
-    width: 15px;
+    width: 10px;
     height: 75px;
     height: calc(50% - 25px);
 }
