--- a/app/main.css
+++ b/app/main.css
@@ -55,7 +55,7 @@ p {
 }
 
 p.timedescription {
-    font-size: 0.6rem;
+    font-size: 0.75rem;
     font-variant: small-caps;
     line-height: 1.5rem;
     margin: 0 auto;
@@ -89,7 +89,7 @@ video {
 }
 
 .clock {
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
     top: 84%;
     left: 50%;
