--- a/app/main.css
+++ b/app/main.css
@@ -1,4 +1,3 @@
-html,
 body {
     margin: 0;
     padding: 0;
@@ -6,20 +5,57 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    min-width: 900px;
 }
+
+.container {
+    position: absolute;
+    height: 1080px;
+    width: 1920px;
+    align-items: center;
+}
+
+video {
+    position: absolute;
+}
+
 
 .title {
     color: white;
     font-family: "Quicksand", sans-serif;
     font-size: 4rem;
     text-transform: uppercase;
+    margin-top: 50px;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    text-align: center;
 
     span {
         font-size: 4rem;
         cursor: pointer;
+    }
+
+    &:hover {
+        -webkit-animation: MISSION-HOVER 1.5s infinite;
+        -moz-animation: MISSION-HOVER 1.5s infinite;
+        -o-animation: MISSION-HOVER 1.5s infinite;
+        animation: MISSION-HOVER 1.5s infinite;
+        animation-direction: alternate;
+        animation-timing-function: ease;
+    }
+
+    @-webkit-keyframes MISSION-HOVER {
+
+        0%,
+        100% {
+            font-size: 4rem;
+            color: white;
+        }
+
+        50% {
+            color: #bffcff;
+            letter-spacing: 5px;
+            text-shadow: 0px 0px 30px rgba(191, 252, 255, 1);
+        }
     }
 }
 
@@ -31,6 +67,7 @@ p {
     padding: 0;
     letter-spacing: 0.5rem;
     text-transform: uppercase;
+    text-align: center;
 
     &:last-child {
         font-size: 0.75rem;
@@ -54,142 +91,198 @@ p {
     }
 }
 
-p.timedescription {
-    font-size: 0.75rem;
-    font-variant: small-caps;
-    line-height: 1.5rem;
-    margin: 0 auto;
+
+
+a {
+    text-decoration: none;
+    color: #1a1a1a;
+}
+
+
+h1 {
+    margin-bottom: 60px;
     text-align: center;
+    font: 300 2.25em;
+    text-transform: uppercase;
+
+
+}
+
+strong {
+    font-weight: 400;
+    color: #ea4c4c;
+}
+
+h2 {
+    margin-bottom: 80px;
+    text-align: center;
+    font: 300 0.7em;
+    text-transform: uppercase;
+
+    strong {
+        font-weight: 400;
+    }
+}
+
+.countdown {
     position: absolute;
-
-
-}
-
-p.timeRefDays {
-    left: 26%;
-}
-
-p.timeRefHours {
-    left: 47%;
-}
-
-p.timeRefMinutes {
-    left: 69%;
-}
-
-video {
-    /* width: inherit; */
-}
-
-.container {
-    position: absolute;
-    height: 1080px;
-    width: 1920px;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    width: 1500px;
+    height: 500px;
+    margin: 0 auto;
+    top: -7%;
+    left: 10%;
 }
 
-.clock {
-    /* height: 100%; */
-    position: absolute;
-    top: 84%;
-    left: 50%;
-    width: 900px;
-    margin-left: -450px;
-    margin-top: -100px;
+.countdown .bloc-time {
+    float: left;
+    margin-right: 80px;
     text-align: center;
 }
 
-.digit {
-    width: 80px;
-    height: 140px;
-    margin: 0 5px;
-    position: relative;
-    display: inline-block;
+.countdown .bloc-time:last-child {
+    margin-right: 0;
 }
 
-.digit .segment {
-    background: rgb(255, 255, 255);
-    border-radius: 5px;
+.countdown .count-title {
+    z-index: 4;
+    display: block;
+    margin-bottom: 20px;
+    font: normal 4.5em Lato;
+    font-family: var(--font-inter);
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.countdown .figure {
+    position: relative;
+    float: left;
+    height: 230px;
+    width: 220px;
+    margin-right: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    -moz-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
+    -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
+}
+
+.countdown .figure:last-child {
+    margin-right: 0;
+}
+
+.countdown .figure>span {
     position: absolute;
-    opacity: 0.15;
-    transition: opacity 0.2s;
-    -webkit-transition: opacity 0.2s;
-    -ms-transition: opacity 0.2s;
-    -moz-transition: opacity 0.2s;
-    -o-transition: opacity 0.2s;
+    left: 0;
+    right: 0;
+    margin: auto;
+    font: normal 12.5em/215px Lato;
+    font-family: var(--font-inter);
+    font-weight: 800;
+    color: #493acf;
 }
 
-.digit .segment.on,
-.separator {
-    opacity: 1;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
-    transition: opacity 0s;
-    -webkit-transition: opacity 0s;
-    -ms-transition: opacity 0s;
-    -moz-transition: opacity 0s;
-    -o-transition: opacity 0s;
+.countdown .figure .top:after,
+.countdown .figure .bottom-back:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.363);
 }
 
-.separator {
-    width: 15px;
-    height: 15px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    top: -63px;
+
+
+.countdown .figure .top {
+    z-index: 3;
+    background-color: #f7f7f7;
+    transform-origin: 50% 100%;
+    -webkit-transform-origin: 50% 100%;
+    -moz-border-radius-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    border-top-left-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    -webkit-border-top-right-radius: 10px;
+    border-top-right-radius: 10px;
+    -moz-transform: perspective(200px);
+    -ms-transform: perspective(200px);
+    -webkit-transform: perspective(200px);
+    transform: perspective(200px);
 }
 
-.digit .segment:nth-child(1) {
-    top: 10px;
-    left: 20px;
-    right: 20px;
-    height: 10px;
+.countdown .figure .bottom {
+    z-index: 1;
 }
 
-.digit .segment:nth-child(2) {
-    top: 20px;
-    right: 10px;
-    width: 10px;
-    height: 75px;
-    height: calc(50% - 25px);
+.countdown .figure .bottom:before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: rgba(0, 0, 0, 0.02);
 }
 
-.digit .segment:nth-child(3) {
-    bottom: 20px;
-    right: 10px;
-    width: 10px;
-    height: 75px;
-    height: calc(50% - 25px);
+.countdown .figure .bottom-back {
+    z-index: 2;
+    top: 0;
+    height: 50%;
+    overflow: hidden;
+    background-color: #f7f7f7;
+    -moz-border-radius-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    border-top-left-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    -webkit-border-top-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.digit .segment:nth-child(4) {
-    bottom: 10px;
-    right: 20px;
-    height: 10px;
-    left: 20px;
+.countdown .figure .bottom-back span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
-.digit .segment:nth-child(5) {
-    bottom: 20px;
-    left: 10px;
-    width: 10px;
-    height: 75px;
-    height: calc(50% - 25px);
+.countdown .figure .top,
+.countdown .figure .top-back {
+    height: 50%;
+    overflow: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
-.digit .segment:nth-child(6) {
-    top: 20px;
-    left: 10px;
-    width: 10px;
-    height: 75px;
-    height: calc(50% - 25px);
+.countdown .figure .top-back {
+    z-index: 4;
+    bottom: 0;
+    background-color: #fff;
+    -webkit-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+    -moz-transform: perspective(200px) rotateX(180deg);
+    -ms-transform: perspective(200px) rotateX(180deg);
+    -webkit-transform: perspective(200px) rotateX(180deg);
+    transform: perspective(200px) rotateX(180deg);
+    -moz-border-radius-bottomleft: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-.digit .segment:nth-child(7) {
-    bottom: 95px;
-    bottom: calc(50% - 5px);
-    right: 20px;
-    left: 20px;
-    height: 10px;
+.countdown .figure .top-back span {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
