--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,9 @@
+/* styles/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&display=swap');
+
+/* Thêm các quy tắc CSS chung cho ứng dụng của bạn nếu cần */
+
+html,
 body {
     margin: 0;
     padding: 0;
@@ -5,25 +11,31 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
+    min-width: 900px;
+    font-family: "Aldrich";
+
+}
+
+.day-remain {
+    font-family: 'Aldrich';
+}
+
+video {
+    width: inherit;
 }
 
 .container {
     position: absolute;
-    height: 1080px;
-    width: 1920px;
+    height: 2560px;
+    width: 1440px;
     align-items: center;
 }
-
-video {
-    position: absolute;
-}
-
 
 .countdown {
     height: 200px;
     position: absolute;
-    top: 21%;
-    left: 49.5%;
+    top: 9.5%;
+    left: 81.5%;
     width: 900px;
     margin-left: -450px;
     margin-top: -100px;
@@ -34,10 +46,6 @@ video {
 
 span {
     color: white;
-    font-size: 23em;
+    font-size: 11em;
 
-}
-
-.day-remain {
-    font-family: 'Aldrich';
 }
