--- a/app/main.css
+++ b/app/main.css
@@ -8,8 +8,6 @@ body {
     margin: 0;
     padding: 0;
     background: #000;
-    width: 100%;
-    height: 100%;
     position: absolute;
     min-width: 900px;
     font-family: "Aldrich";
@@ -34,12 +32,9 @@ video {
 
 .countdown {
     height: 200px;
-    position: absolute;
-    top: 29.5%;
-    left: 81.5%;
-    width: 900px;
-    margin-left: -450px;
-    margin-top: -100px;
+    position: fixed;
+    top: 21.5%;
+    left: 77%;
     text-align: center;
     z-index: 9999;
     /* background-color: aliceblue; */
